--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "active-win",
+	"name": "active-win-beta",
 	"version": "8.1.1",
 	"description": "Get metadata about the active window (title, id, bounds, owner, URL, etc)",
 	"license": "MIT",
